--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -12,8 +12,8 @@
         "skipLibCheck": true,
         "forceConsistentCasingInFileNames": true,
         "resolveJsonModule": true,
-        "declaration": true,
-        "declarationMap": true,
+        "declaration": false,
+        "declarationMap": false,
         "sourceMap": true,
         "moduleResolution": "node",
         "allowSyntheticDefaultImports": true,
@@ -24,8 +24,8 @@
         "strictFunctionTypes": true,
         "noImplicitReturns": true,
         "noFallthroughCasesInSwitch": true,
-        "noUnusedLocals": true,
-        "noUnusedParameters": true,
+        "noUnusedLocals": false,
+        "noUnusedParameters": false,
         "baseUrl": ".",
         "paths": {
             "@/*": [
